added admin restriction to delete and edit

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -141,7 +141,7 @@ color: white;
   margin-top: -229px;
 }
 .treats{
-  width: 500px;
+  width: 700px;
   position: absolute;
   margin-top: -478px;
   margin-left: 400px;
@@ -149,4 +149,11 @@ color: white;
   -moz-animation: fadeIn 2s;
   -o-animation: fadeIn 2s;
   animation: fadeIn 2s;
+}
+#trailer:hover{
+  -webkit-transform: scale(1.7,1.7);
+    -moz-transform:scale(1.7,1.7);
+    opacity: 1.7;
+    -webkit-opacity: 1.7;
+    -moz-opacity: 1.7;
 }
