--- a/app/views/products/festivals.html.erb
+++ b/app/views/products/festivals.html.erb
@@ -7,8 +7,8 @@
 <h2>Treats</h2>
 <p>From Popcorn to Tropical Sno® shaved ice, Cotton Candy, Retro Pop, Caramel Apples, and Deep Fried OREOS®, We Have what you're craving! Come out to see us at one of our Festivals today!</p>
 <img src="assets/output_T2W7Qg.gif" style="max-height: 250px; max-width: 152px;" class="img-thumbnail">
-<img alt="Sweet trailer" src="/assets/sweet-trailer.jpg" class="img-thumbnail" style="height: 300px;">   
-</div></center><br><br><br><br><br><br><br><br>
+<img alt="Sweet trailer" src="/assets/sweet-trailer.jpg" id="trailer" class="img-thumbnail" style="height: 300px;" > 
+</div></center><br><br>
 <!-- calendar goes here -->
 <center><iframe src="https://www.google.com/calendar/embed?src=faqq2rac2jccnhuevt6l1podh4%40group.calendar.google.com&ctz=America/Chicago" style="border: 0" width="1200" height="550" frameborder="0" scrolling="no"></iframe></center>
 <div>
