--- a/app/views/products/storepic.html.erb
+++ b/app/views/products/storepic.html.erb
@@ -1,5 +1,7 @@
 <div class="container-fluid">
+  <div class="img-thumbnail" >
   <%= image_tag "store-pic-1.jpg" %>
+  </div>
   <span>Take a look in the center of the picture! That's MOM Shimkus!</span>
   <button><a href="/">Go Back</a></button>
 </div>
