--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -157,3 +157,15 @@ color: white;
     -webkit-opacity: 1.7;
     -moz-opacity: 1.7;
 }
+.special{
+  position: absolute;
+    left: 30px;
+    top: 50px;
+    z-index: +1;
+}
+.item img{
+  height: 200px;
+}
+.panel-body img{
+  height: 100px;
+}
