--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,16 +34,26 @@
       <ul class="nav navbar-nav">
         <!-- <li class="active"><a href="">Link<span class="sr-only">(current)</span></a></li>
         <li><a href="#">Link</a></li> -->
-        <% if user_signed_in? %>
-          <li><a href="/users/sign_out" >Wholesale Sign Out</a></li>
-          <% else %>
-          <li><a href="/users/sign_in" >Wholesale Sign in</a></li>
-          <li><a href="/users/sign_up">Wholesale Sign up</a></li>
-        <% end %>
         
-        <li class="dropdown">
+          <% if user_signed_in? && current_user.ws_cust? %>
+          <li><a href="#">
+            <i class="glyphicon glyphicon-shopping-cart" title="Shopping Cart"></i>
+                <span class="hidden-sm hidden-xs">Shopping Cart</span></a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fa fa-crosshairs" title="Checkout"></i>
+                <span class="hidden-sm hidden-xs">Checkout</span></a>
+          </li>
+          <li><a href="/ws_popcorn_flavors">See Products available</a></li>
+          <li><a href="/" class="glyphicon glyphicon-thumbs-up"> Make an Order</a></li>
+          <li><a href="/">View my Orders</a></li>
+          <% end %>
+        
+        <!-- <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Products <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">           
+          <ul class="dropdown-menu" role="menu"> 
+
             <li><a href="">Popcorn<img src="/assets/animated-popcorn.gif" alt="HTML5 Icon" style="width:75px;height:40px"></a></li>
               <ul><a href="">Tins</a></ul> 
               <ul><a href="">Bags</a></ul>         
@@ -60,10 +70,11 @@
             <li><a href="">Candy Bars<img src="/assets/kitkat.png" alt="HTML5 Icon" style="width:70px;height:35px"></a></li>
             
           </ul>
-        </li>
+        </li> -->
       </ul>
       
       <ul class="nav navbar-nav navbar-right">
+        
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Links <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
@@ -74,8 +85,9 @@
             <li><a href="/admins">Administration</a></li>
             <% end %>
               <% if user_signed_in? && current_user.ws_cust? %>
-                <li><a href="/reservations/new" class="glyphicon glyphicon-thumbs-up"> Make an Order</a></li>
-                <li><a href="/users/<%= current_user.id %>">View my Orders</a></li>
+                <li><a href="/ws_popcorn_flavors">See Products available</a></li>
+                <li><a href="/" class="glyphicon glyphicon-thumbs-up"> Make an Order</a></li>
+                <li><a href="/">View my Orders</a></li>
                 <li>
                   <a href="#">
                     <i class="glyphicon glyphicon-shopping-cart" title="Shopping Cart"></i>
@@ -95,6 +107,8 @@
               <% end %>
           </ul>
         </li>
+        <!-- this is where the boolean is needed to activate a special -->
+        
         <li><a href="/festivals">Festivals</a><br /></li>
         <li><a data-toggle="modal" data-target="#myModal">
               Hours
@@ -121,7 +135,7 @@
               </div>
               <div class="modal-footer">
               <p class="modalFoot">"We Make Sweet Memories!"</p>
-              
+
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
               </div>
             </div>
@@ -151,23 +165,32 @@
       <!-- Container -->
       <div class="container">
         <!-- Footer Content -->
+        <div>
+        
+        </div>
           <!-- Paragraph -->
           <p class="pull-left">Copyright &copy; <%= Time.new.year %> Sweet Street 
-          <strong>"We Make Sweet Memories!"</strong></p>
+          <strong>"We Make Sweet Memories!"</strong></p>&nbsp;&nbsp;&nbsp;<span class="glyphicon glyphicon-camera">Take Pictures!</span>
             <!-- List -->
           <ul class="list-inline pull-right">
+            <% if user_signed_in? && current_user.ws_cust? %>
+            <li><a href="/users/edit">Update my Account Info</a></li>
+            <% end %>
+            <% if user_signed_in? && current_user.admin? %>
+            <li><a href="/admins">Administration</a></li>
+            <% end %>
             <% if user_signed_in? %>
-              <li><a href="/users/sign_out">Admin Sign Out</a></li>
-              <% else %>
-              <li><a href="/users/sign_in">Admin Sign in</a></li>
-              <!-- <li><a href="/users/sign_up">Admin Sign up</a></li> -->
-              <% end %>
+              <li><a href="/users/sign_out" >Wholesale Sign Out</a></li>
+            <% else %>
+            <li><a href="/users/sign_in" >Wholesale Sign in</a></li>
+            <li><a href="/users/sign_up">Wholesale Sign up</a></li>
+            <% end %>
           </ul>
           <!-- Clearfix -->
           <div class="clearfix"></div>
       </div>
     </footer>
-</body>
+</body><br>
 </div>
 </div>
 </html>
