--- a/app/views/popcorn_flavors/_form.html.erb
+++ b/app/views/popcorn_flavors/_form.html.erb
@@ -1,3 +1,4 @@
+<div class="container-fluid">
 <%= form_for @popcorn_flavor do |f| %>
 
   <div class ="row">
@@ -11,43 +12,23 @@
       </div>
   </div>
   <div class="panel-heading">
-      <h3 class="panel-title">Photo</h3>
-    </div>
-      <div class="panel-body">
-        <h4>Current Photo</h4><%= image_tag @popcorn_flavor.photo , class: "img-responsive" %>
+    <h3 class="panel-title">Photo</h3>
+  </div>
+    <div class="panel-body">
+      <h4>Current Photo</h4><%= image_tag @popcorn_flavor.photo , class: "img-responsive" %>
         <%= f.label :photo %>
-        <%= f.file_field :photo, :required => true %>
-      </div>
-  </div>
-  <div class="panel-heading">
-      <h3 class="panel-title">Prices</h3>
+        <%= f.file_field :photo %>
+    </div>
+    <div class="panel-heading">
+      <h3 class="panel-title">Description</h3>
     </div>
       <div class="panel-body">
-        <%= f.label :Small_bag %> $
-        <%= f.text_field :sm_bag, :required => true %>
+        <%= f.label :description %>
+        <%= f.text_field :description, :required => true %>
       </div>
-      <div class="panel-body">
-        <%= f.label :Large_bag %>
-        <%= f.text_field :lg_bag, :required => true %>
-      </div>
-      <div class="panel-body">
-        <%= f.label :One_Gallon_Tin %>
-        <%= f.text_field :one_gal_tin, :required => true %>
-      </div>
-      <div class="panel-body">
-        <%= f.label :Two_Gallon_Tin %>
-        <%= f.text_field :two_gal_tin, :required => true %>
-      </div>
-      <div class="panel-body">
-        <%= f.label :Three_and_a_half_Gallon_Tin %>
-        <%= f.text_field :three_and_half_tin, :required => true %>
-      </div>
-      <div class="panel-body">
-        <%= f.label :Six_and_a_half_Gallon_Tin %>
-        <%= f.text_field :six_and_half_tin, :required => true %>
-      </div>
-  </div>
+ 
   
   
   <%= f.submit %>
 <% end %>
+</div>
