--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,3 +1,4 @@
+<div class="container-fluid">
 <%= form_for @product do |f| %>
 
   <div class ="row">
@@ -11,22 +12,32 @@
       </div>
   </div>
   <div class="panel-heading">
-      <h3 class="panel-title">Product</h3>
+      <h3 class="panel-title">Photo</h3>
     </div>
       <div class="panel-body">
         <%= f.label :photo %>
-        <%= f.file_field :photo, :required => true %>
+        <%= f.file_field :photo %>
+        <%= image_tag @product.photo_url , class: "img-responsive" %>
       </div>
   </div>
   <div class="panel-heading">
-      <h3 class="panel-title">Product</h3>
+      <h3 class="panel-title">Description</h3>
     </div>
       <div class="panel-body">
         <%= f.label :description %>
         <%= f.text_field :description, :required => true %>
       </div>
   </div>
+  <div class="panel-heading">
+      <h3 class="panel-title">On Sale?</h3>
+    </div>
+      <div class="panel-body">
+        <%= f.label :special %>
+        <%= f.check_box (:special) %>
+      </div>
+  </div>
   
   
   <%= f.submit %>
 <% end %>
+</div>
