--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -13,34 +13,6 @@
 
       </div>
       
-        <!-- search begins -->
-        <%#= form_tag("/search", method: "get") do %>
-        <%#= label_tag(:q, "Search for:") %>
-        <%#= text_field_tag(:q) %>
-        <%#= submit_tag("Search") %>
-        <%# end %>
-        <!-- search ends -->
-
-
-        <!-- <center><h3 class="product-header">Popcorn - Candy - Tropical Sno Shaved Ice - Chocolate Dipped Strawberries - and so much MORE!</h3></center> -->
-
-         <div class="container-fluid">
-        <% @products.each do |p| %>
-        <div class="col-md-3 col-sm-3 col-xs-12 bor">
-        <h4 class="product-header"><a href="/products/<%=p.id%>"><%= p.name %></h4>
-        <p class='img-thumbnail'><img src='<%= p.photo %>'  height="170" width="180" ></a></p>
-          <% if user_signed_in? && current_user.admin? %>
-          <button><%= link_to 'EDIT Product', edit_product_path(p.id) %></button>
-            <a data-confirm="Are you sure?" data-method="delete" href="/products/<%= p.id %>" rel="nofollow"><button type="button" class="btn btn-danger">Delete Product</button></a>
-          <% end %>
-
-        </div>
-        <% end %>
-      </div>
-
-
-        
-    
       <section class="slider">
         <div class="container-fluid">
           <div id="main-carousel" class="carousel slide" data-ride="carousel">
@@ -48,8 +20,9 @@
             <div class="carousel-inner">
 
               <div class="item active">
-                <center><a href="/aboutus"><%= image_tag "Chocolate-Popcorn-Tin2.png" %></a></center>                
+                <center><a href="/popcorn_flavors"><%= image_tag "Chocolate-Popcorn-Tin2.png" %></a></center>                
               </div>
+              <!-- 473 -->
 
               <div class="item">
                 <center><%= image_tag "caramel-apples.png" %></center>
@@ -88,8 +61,42 @@
           </div>        
         </div>
       </section>
+        <!-- search begins -->
+        <%#= form_tag("/search", method: "get") do %>
+        <%#= label_tag(:q, "Search for:") %>
+        <%#= text_field_tag(:q) %>
+        <%#= submit_tag("Search") %>
+        <%# end %>
+        <!-- search ends -->
 
-      <div id="reviews">
+        <!-- <center><h3 class="product-header">Popcorn - Candy - Tropical Sno Shaved Ice - Chocolate Dipped Strawberries - and so much MORE!</h3></center> -->
+
+          <button type="button" class="btn btn-success"><a href="/products/new"><h5>ADD A NEW Product</h5></a></button>
+         <div class="container-fluid">
+        <% @products.each do |p| %>
+        <div class="col-md-3 col-sm-3 col-xs-12 bor">
+        <h4 class="product-header">
+          <a href="/products/<%=p.id%>"><%= p.name %></a></h4>
+            
+        <p class='img-thumbnail'><% if p.special? %>
+          <div class="special"><a href=""><%= image_tag "specials.png" %></a></div>
+            
+            <% end %>
+          <img src='<%= p.photo %>'  height="170" width="auto" ></a></p>
+
+          
+         
+          <% if user_signed_in? && current_user.admin? %>
+          <button><%= link_to 'EDIT Product', edit_product_path(p.id) %></button>
+            <a data-confirm="Are you sure?" data-method="delete" href="/products/<%= p.id %>" rel="nofollow"><button type="button" class="btn btn-danger">Delete Product</button></a>
+          <% end %>
+        </div>
+        <% end %>
+      </div>
+        
+    
+
+      <!-- <div id="reviews">
 
         <table class="table table-striped table-bordered table-responsive">
           <thead>
@@ -115,7 +122,7 @@
           <label>Name:</label>
           <input ng-model="newReviewName">
           <button ng-click="addReview(newReviewText,newReviewRating, newReviewName)">Add Review</button>
-      </div>
+      </div> -->
 
     </div>
   </div>
