--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -6,8 +6,8 @@
 <button><a href="/products">Edit or Delete Products</a></button><br>
 <button><a href="/popcorn_flavors/new">Add a Popcorn Flavor</a></button>
 <button><a href="/popcorn_flavors">Edit or Delete a Popcorn Flavor</a></button><br>
-<button><a href="/ws_popcorn_flavors/new">Add a Wholesale Popcorn Flavor</a></button>
-<button><a href="/ws_popcorn_flavors">Edit or Delete a Wholesale Popcorn Flavor</a></button><br>
+<button><a href="/ws_products/new">Add a Wholesale Popcorn Flavor</a></button>
+<button><a href="/ws_products">Edit or Delete a Wholesale Popcorn Flavor</a></button><br>
 <button><a href="/users">Edit a Users Information</a></button>
 
 
