--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,8 +32,6 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <!-- <li class="active"><a href="">Link<span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link</a></li> -->
         
           <% if user_signed_in? && current_user.ws_cust? %>
           <li><a href="#">
@@ -45,32 +43,10 @@
               <i class="fa fa-crosshairs" title="Checkout"></i>
                 <span class="hidden-sm hidden-xs">Checkout</span></a>
           </li>
-          <li><a href="/ws_popcorn_flavors">See Products available</a></li>
-          <li><a href="/" class="glyphicon glyphicon-thumbs-up"> Make an Order</a></li>
+          <li><a href="/ws_products">See Products available</a></li>
+          <!-- <li><a href="/" class="glyphicon glyphicon-thumbs-up"> Make an Order</a></li> -->
           <li><a href="/">View my Orders</a></li>
           <% end %>
-        
-        <!-- <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Products <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu"> 
-
-            <li><a href="">Popcorn<img src="/assets/animated-popcorn.gif" alt="HTML5 Icon" style="width:75px;height:40px"></a></li>
-              <ul><a href="">Tins</a></ul> 
-              <ul><a href="">Bags</a></ul>         
-            <li><a href="">Truffles</a></li>           
-            <li><a href="" >Chocolate Dipped Strawberries<img src="/assets/Choc-dip-strawberry.jpg" alt="HTML5 Icon" style="width:35px;height:40px"></a></li>
-
-            <li><a href="">Chewy candy</a></li>
-            <li><a href="">Sour candy</a></li>
-            <li><a href="">Retro candy</a></li>
-            <li><a href="">Chewy candy</a></li>
-            <li><a href="">Nuts</a></li>
-            <li><a href="">Chocolate candies</a></li>
-            <li><a href="">Caramel Apples<img src="/assets/caramel-apple.jpg" alt="HTML5 Icon" style="width:35px;height:50px"></a></li>
-            <li><a href="">Candy Bars<img src="/assets/kitkat.png" alt="HTML5 Icon" style="width:70px;height:35px"></a></li>
-            
-          </ul>
-        </li> -->
       </ul>
       
       <ul class="nav navbar-nav navbar-right">
@@ -85,8 +61,8 @@
             <li><a href="/admins">Administration</a></li>
             <% end %>
               <% if user_signed_in? && current_user.ws_cust? %>
-                <li><a href="/ws_popcorn_flavors">See Products available</a></li>
-                <li><a href="/" class="glyphicon glyphicon-thumbs-up"> Make an Order</a></li>
+                <li><a href="/ws_products">See Products available</a></li>
+                <!-- <li><a href="/" class="glyphicon glyphicon-thumbs-up"> Make an Order</a></li> -->
                 <li><a href="/">View my Orders</a></li>
                 <li>
                   <a href="#">
