--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -11,7 +11,7 @@
       <% @users.each do |user| %>
       <tr>
         <td><a href="/users/<%= user.id %>/edit"><%= user.email %></td></a>
-        <td><%= user.created_at.strftime("%m/%d/%Y") %></td>
+        <td><%= user.remember_created_at.strftime("%m/%d/%Y") %></td>
         <td><%= user.last_sign_in_at.strftime("%A, %d %b %Y %l:%M %p") %></td>
       </tr>
   <% end %>
