--- a/app/assets/stylesheets/ws_products.css.scss
+++ b/app/assets/stylesheets/ws_products.css.scss
@@ -1,3 +1,3 @@
-// Place all the styles related to the ws_popcorn_flavors controller here.
+// Place all the styles related to the ws_products controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
