--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,55 +34,20 @@
       <ul class="nav navbar-nav">
         
           <% if user_signed_in? && current_user.ws_cust? %>
-          <li><a href="#">
-            <i class="glyphicon glyphicon-shopping-cart" title="Shopping Cart"></i>
+          <li><a href="/ws_products">See Products available</a></li>        
+        
+          <li><a href="/carted_products">
+            <i class="glyphicon glyphicon-shopping-cart" title="My Cart"></i>
                 <span class="hidden-sm hidden-xs">Shopping Cart</span></a>
           </li>
-          <li>
-            <a href="#">
-              <i class="fa fa-crosshairs" title="Checkout"></i>
-                <span class="hidden-sm hidden-xs">Checkout</span></a>
-          </li>
-          <li><a href="/ws_products">See Products available</a></li>
-          <!-- <li><a href="/" class="glyphicon glyphicon-thumbs-up"> Make an Order</a></li> -->
-          <li><a href="/">View my Orders</a></li>
+       
+          <li><a href="/orders">My History</a></li>
           <% end %>
       </ul>
       
       <ul class="nav navbar-nav navbar-right">
         
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Links <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <% if user_signed_in? %>
-            <li><a href="/users/edit">Update my Account Info</a></li>
-            <% end %>
-            <% if user_signed_in? && current_user.admin? %>
-            <li><a href="/admins">Administration</a></li>
-            <% end %>
-              <% if user_signed_in? && current_user.ws_cust? %>
-                <li><a href="/ws_products">See Products available</a></li>
-                <!-- <li><a href="/" class="glyphicon glyphicon-thumbs-up"> Make an Order</a></li> -->
-                <li><a href="/">View my Orders</a></li>
-                <li>
-                  <a href="#">
-                    <i class="glyphicon glyphicon-shopping-cart" title="Shopping Cart"></i>
-                      <span class="hidden-sm hidden-xs">
-                        Shopping Cart
-                      </span>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <i class="fa fa-crosshairs" title="Checkout"></i>
-                    <span class="hidden-sm hidden-xs">
-                        Checkout
-                    </span>
-                  </a>
-                </li>
-              <% end %>
-          </ul>
-        </li>
+        
         <!-- this is where the boolean is needed to activate a special -->
         
         <li><a href="/festivals">Festivals</a><br /></li>
