--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,12 +1,32 @@
 <div class = "container-fluid">
-  <h1>Here is your order:</h1>
+  <h1>Here is your order and cost:</h1>
+  
+  <center><h3 class="bg-green"> YOUR TOTAL COST <%= number_to_currency @order.total %></h3></center>
+  <table class="table table-striped table-bordered table-responsive">
+   <thead>
+    <tr>
+      <th class="bg-primary">Name</th>
+      <th class="bg-primary">Small Bag</th>
+      <th class="bg-primary">Large Bag</th>
+      <th class="bg-primary">1 Gal Tin</th>
+      <th class="bg-primary">2 Gal Tin</th>
+      <th class="bg-primary">3 1/2 Gal Tin</th>
+      <th class="bg-primary">6 1/2 Gal Tin</th>
+    </tr>
+   </thead>
+   <tbody>
+
   <% @order.carted_products.each do |carted_product| %>
-    <%= carted_product.sm_bag_qty %>
-    <%= carted_product.lg_bag_qty %>
-    <%= carted_product.one_gal_tin_qty %>
-    <%= carted_product.two_gal_tin_qty %>
-    <%= carted_product.three_half_tin_qty %>
-    <%= carted_product.six_half_tin_qty %>
-    <%= carted_product.ws_product.name%>
+    <tr>
+  <td><%= carted_product.ws_product.name %></td>
+  <td><%= carted_product.sm_bag_qty %></td>
+  <td><%= carted_product.lg_bag_qty %></td>
+  <td><%= carted_product.one_gal_tin_qty %></td>
+  <td><%= carted_product.two_gal_tin_qty %></td>
+  <td><%= carted_product.three_half_tin_qty %></td>
+  <td><%= carted_product.six_half_tin_qty %></td>
   <% end %>
+  </tr>
+  </tbody>
+  </table>
 </div>
