--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -4,7 +4,7 @@
 
 
 
-<center class="img-thumbnail"><%= image_tag @product.photo %></center><br />
+<div class="img-thumbnail"><img src="<%= @product.photo %>" alt="Smiley face" width="400" > </div><button><a href="/">Return to Products</a></button><br />
 <h3><%= @product.description %></h3>
 
 
