--- a/app/views/ws_products/show.html.erb
+++ b/app/views/ws_products/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
 <h1 class="show-header"><%= @ws_product.name %> Wholesale Popcorn</h1><br>
-<p class="logo-popcorn-show"><img src="<%= @ws_product.photo %>"></p>
+<p class="logo-popcorn-show"><img src="<%= @ws_product.photo %>" width="200"></p>
 <p class="logo-popcorn-show"><%= image_tag "Sweet-street-logo.png" %></p>
 <table class="table table-striped table-bordered table-responsive">
   <thead>
