--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,7 +1,7 @@
 <div class = "container-fluid">
   <h1>Here is your order and cost:</h1>
   
-  <center><h3 class="bg-green"> YOUR TOTAL COST <%= number_to_currency @order.total %></h3></center>
+  <center><h3 class="bg-green"> Here is your order and cost: YOUR TOTAL COST <%= number_to_currency @order.total %></h3></center>
   <table class="table table-striped table-bordered table-responsive">
    <thead>
     <tr>
@@ -29,4 +29,8 @@
   </tr>
   </tbody>
   </table>
+  <%= form_tag charges_path do %>
+            <div id="pay-button"><script src="https://checkout.stripe.com/checkout.js" class="stripe-button" data-key="<%= Rails.configuration.stripe[:publishable_key] %>" data-image="/assets/sweet-logo.png" style="width: 100px height: 100px" data-description="Sweet Street payment systems" data-amount="<%= (@order.total * 100).to_i %>" data-email="<%= current_user.email %>"></script>
+            </div>
+          <% end %>
 </div>
