--- a/app/views/user_mailer/signin_confirmation.html.erb
+++ b/app/views/user_mailer/signin_confirmation.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
+    <%= image_tag attachments['sweet_logo.png'].url -%>
   </head>
   <body>
     <h1>Welcome to Sweet Street Wholesale inquiry! <%= @first_name %> <%=@last_name %></h1>
