added additional email to user to confirm order

--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -13,7 +13,7 @@
 
   <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
           data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-          data-description="A month's subscription"
+          data-description="Sweet Street Order"
           data-amount="<%= @amount * 100 %>"></script>
 <% end %>
 
