removed flash messages deemed uneeded

--- a/app/views/charges/create.html.erb
+++ b/app/views/charges/create.html.erb
@@ -1,5 +1,7 @@
 <div class= "container-fluid">
+  
 <h2>Thank you for your payment of <strong><%= number_to_currency @order.total %></strong>!</h2>
 <h3>You will recieve a confirmation email soon.</h3>
 
 <button><a href="/">HOME</a></button>
+</div>
