--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,11 +36,11 @@
         
           <li><a href="/carted_products">
             <i class="glyphicon glyphicon-shopping-cart" title="My Cart"></i>
-                <span class="hidden-sm hidden-xs">Shopping Cart </span></a>
+                <span class="hidden-sm hidden-xs">Shopping Cart/ Checkout </span></a>
           </li>
 
        
-          <li><a href="/orders">My History</a></li>
+          <!-- <li><a href="/orders">My History</a></li> -->
           <% end %>
       </ul>
       
