--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -30,7 +30,8 @@
   </tbody>
   </table>
   <%= form_tag charges_path do %>
-            <div id="pay-button"><script src="https://checkout.stripe.com/checkout.js" class="stripe-button" data-key="<%= Rails.configuration.stripe[:publishable_key] %>" data-image="/assets/sweet-logo.png" style="width: 100px height: 100px" data-description="Sweet Street payment systems" data-amount="<%= (@order.total * 100).to_i %>" data-email="<%= current_user.email %>"></script>
-            </div>
-          <% end %>
+    <div id="pay-button"><script src="https://checkout.stripe.com/checkout.js" class="stripe-button" data-key="<%= Rails.configuration.stripe[:publishable_key] %>" data-image="/assets/sweet-logo.png" style="width: 100px height: 100px" data-description="Sweet Street" data-amount="<%= (@order.total * 100).to_i %>" data-email="<%= current_user.email %>"></script>
+      <i class="glyphicon glyphicon-credit-card" title="My Cart"></i>
+    </div>
+  <% end %>
 </div>
