heroku try again

--- a/app/views/user_mailer/order_confirmation.html.erb
+++ b/app/views/user_mailer/order_confirmation.html.erb
@@ -2,7 +2,7 @@
   <!DOCTYPE html>
 <html>
   <head>
-    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
+    <!-- <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' /> -->
     <%= image_tag attachments['sweet_logo.png'].url -%>
   </head>
   <body>
