--- a/app/views/user_mailer/signin_confirmation.html.erb
+++ b/app/views/user_mailer/signin_confirmation.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
+    <!-- <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' /> -->
   </head>
   <body>
     <h1>Welcome to Sweet Street Wholesale inquiry! <%= @first_name %> <%=@last_name %></h1>
