--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -8,12 +8,13 @@
 <h3><%= @product.description %></h3>
 
 
-<% @product.popcorn_flavors.each do |flavor| %>
-<div class="col-md-3">
-<p><a href="/popcorn_flavors/<%= flavor.id %>"><%= flavor.name %></a></p>
+<%# @product.popcorn_flavors.each do |flavor| %>
+<!-- <div class="col-md-3"> -->
 
-</div>
-<% end %>
+<!-- <p><a href="/popcorn_flavors/<%= flavor.id %>"><%= flavor.name %></a></p> -->
+
+<!-- </div> -->
+<%# end %>
 
 
 
