--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,5 @@
 <div class="container-fluid">
   <head>
-    <link rel="stylesheet" href="animate.min.css">
   </head>
   <div ng-app="app">
     <div ng-controller="productCtrl"> 
@@ -22,7 +21,7 @@
           <span>Welcome To Sweet Street
           </span>
         
-          <p class="video" ><iframe width="450" height="270" src="https://www.youtube.com/embed/aOcdaMEVNtw" frameborder="3" allowfullscreen ></iframe></p><br>
+          <center><p class="video" ><iframe width="450" height="270" src="https://www.youtube.com/embed/aOcdaMEVNtw" frameborder="3" allowfullscreen ></iframe></p></center><br>
         <div>""</div>
 
       </div>
@@ -34,7 +33,7 @@
             <div class="carousel-inner">
 
               <div class="item active">
-                <center><a href="/popcorn_flavors"><%= image_tag "Chocolate-Popcorn-Tin2.png" %></a></center>                
+                <center><%= image_tag "Chocolate-Popcorn-Tin2.png" %></a></center>                
               </div>
               <!-- 473 -->
 
@@ -43,7 +42,11 @@
               </div>
 
               <div class="item">
-                <center><%= image_tag "t61.png" %></center>
+                <center><%= image_tag "pop-banner2.png" %></center>
+              </div>
+
+              <div class="item">
+                <center><%= image_tag "lolipops.png" %></center>
               </div>
 
               <div class="item">
