added an image path

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -26,7 +26,7 @@ body {
   margin-left: 5px;
   margin-right: 5px;
   position: relative;
-  background-image: url("store-pic-1.jpg");
+  background-image: image_path("store-pic-1.jpg");
    background-repeat: no-repeat;
   font-family: Papyrus,fantasy;
   font-size: 225%
