moved rails 12 factor

--- a/app/views/products/aboutus.html.erb
+++ b/app/views/products/aboutus.html.erb
@@ -1,24 +1,21 @@
 <div class="container-fluid">
 <h1>About us</h1>
 
-<div class="img-thumbnail">
-  <div class="store-pic">
-<%= image_tag"storelogo.png" %><br>
-<h6>Map to Sweet Street!</h6><div class="map"><iframe src="//maps.google.com/maps?v=2&amp;f=q&amp;ie=UTF8&amp;t=m&amp;iwloc=&amp;q=592+Wm+Latham+Dr+Ste1&amp;hl=en&amp;z=17&amp;source=s_q&amp;output=embed" style="width: 100%; height: 100%" height="100%" scrolling="no"></iframe><div style="overflow:hidden"><a href="//maps.google.com/maps?v=2&amp;f=q&amp;ie=UTF8&amp;t=m&amp;iwloc=&amp;q=592+Wm+Latham+Dr+Ste1&amp;z=17&amp;source=embed" target="_blank">View Larger Map</a></div></div>
-
+  <div class="img-thumbnail">
+    <div class="store-pic">
+      <%= image_tag"storelogo.png" %><br>
+      <h6>Map to Sweet Street!</h6><div class="map"><iframe src="//maps.google.com/maps?v=2&amp;f=q&amp;ie=UTF8&amp;t=m&amp;iwloc=&amp;q=592+Wm+Latham+Dr+Ste1&amp;hl=en&amp;z=17&amp;source=s_q&amp;output=embed" style="width: 100%; height: 100%" height="100%" scrolling="no"></iframe><div style="overflow:hidden"><a href="//maps.google.com/maps?v=2&amp;f=q&amp;ie=UTF8&amp;t=m&amp;iwloc=&amp;q=592+Wm+Latham+Dr+Ste1&amp;z=17&amp;source=embed" target="_blank">View Larger Map</a></div>
+    </div>
   </div>
 </div>
 
-<div class="about_info">
-  <h1>Family Owned and Operated</h1>
-    <p>One step into Sweet Street in Bourbonnais and you'll quickly realize why it's become a tradition for "kid's of all ages". Family owned and operated since 1993, our quest has always been the same; quality, service, and a "Sweet" experience to all who visit. The aroma of fresh made Caramelcorn, Cheesecorn, and other Gourmet Popcorn varieties serve to delight even the most discriminating of tastes buds. By the bag or in a refillable gift tin, Sweet Street's Popcorn gets rave reviews from customers nation wide. We only use fresh, quality ingredients in making our popcorn and other confections. That's why it's not difficult to see why we not only serve the retail customer, but also the wholesale market as well. Sweet Street is open for business 7 days a week and it's a great place to bring the whole family! Come in today and let us become a "Sweet" tradition for your family as well. We hope to see you soon!</p>
-    <p>Wholesale and Corporate orders are always welcome too! Shipping is available.</p>
-    <h1>Candy</h1>
-    <p>Over 500 varieties of Chocolates and Candies fill the store as well as Nostalgic Candy, "Retro" Sodas, Fudge, Truffles, Chocolate and Roasted Nuts, Sugar Free Choclates, Candies and Fudge, Mix and Match Candy, Jelly Belly's, Door County Coffees and Cocoas, Snack Mixes, Kid's Candy and fresh made Cotton Candy.</p>
-    <p>Seasonal favorites are also available during the year and they include Tropical Sno Shaved Ice, Choclate Dipped Strawberries, Caramel Apples, Peanut Brittle, Divinity, and Marzipan.</p>
-    <p>Not to be forgotten are the Gift Baskets and Gift Boxes beautifully created and priced "just right" as well as Party Trays, Boxes of our Fine Chocolates, Plush, Balloons and Gifts, Treat bags for the kids, Leanin"Tree Greeting Cards and so much more!</p>
-</div>
-
-
-
+  <div class="about_info">
+    <h1>Family Owned and Operated</h1>
+      <p>One step into Sweet Street in Bourbonnais and you'll quickly realize why it's become a tradition for "kid's of all ages". Family owned and operated since 1993, our quest has always been the same; quality, service, and a "Sweet" experience to all who visit. The aroma of fresh made Caramelcorn, Cheesecorn, and other Gourmet Popcorn varieties serve to delight even the most discriminating of tastes buds. By the bag or in a refillable gift tin, Sweet Street's Popcorn gets rave reviews from customers nation wide. We only use fresh, quality ingredients in making our popcorn and other confections. That's why it's not difficult to see why we not only serve the retail customer, but also the wholesale market as well. Sweet Street is open for business 7 days a week and it's a great place to bring the whole family! Come in today and let us become a "Sweet" tradition for your family as well. We hope to see you soon!</p>
+      <p>Wholesale and Corporate orders are always welcome too! Shipping is available.</p>
+      <h1>Candy</h1>
+      <p>Over 500 varieties of Chocolates and Candies fill the store as well as Nostalgic Candy, "Retro" Sodas, Fudge, Truffles, Chocolate and Roasted Nuts, Sugar Free Choclates, Candies and Fudge, Mix and Match Candy, Jelly Belly's, Door County Coffees and Cocoas, Snack Mixes, Kid's Candy and fresh made Cotton Candy.</p>
+      <p>Seasonal favorites are also available during the year and they include Tropical Sno Shaved Ice, Choclate Dipped Strawberries, Caramel Apples, Peanut Brittle, Divinity, and Marzipan.</p>
+      <p>Not to be forgotten are the Gift Baskets and Gift Boxes beautifully created and priced "just right" as well as Party Trays, Boxes of our Fine Chocolates, Plush, Balloons and Gifts, Treat bags for the kids, Leanin"Tree Greeting Cards and so much more!</p>
+  </div>
 </div>
