removed required photo

--- a/app/views/ws_products/_form.html.erb
+++ b/app/views/ws_products/_form.html.erb
@@ -17,7 +17,7 @@
       <div class="panel-body">
         <h4></h4><%= image_tag @ws_product.photo , class: "img-responsive" %>
         <%= f.label :photo %>
-        <%= f.file_field :photo, :required => true %>
+        <%= f.file_field :photo %>
       </div>
   </div>
   <div class="panel-heading">
