--- a/app/views/ws_products/_form.html.erb
+++ b/app/views/ws_products/_form.html.erb
@@ -4,7 +4,7 @@
   <div class ="row">
 
     <div class="panel-heading">
-      <h3 class="panel-title">Popcorn</h3>
+      <h3 class="panel-title">Wholesale Product</h3>
     </div>
       <div class="panel-body">
         <%= f.label :name %>
@@ -24,27 +24,27 @@
       <h3 class="panel-title">Prices</h3>
     </div>
       <div class="panel-body">
-        <%= f.label :Small_bag %> $
+        <%= f.label :small_bag %>
         <%= f.text_field :sm_bag, :required => true %>
       </div>
       <div class="panel-body">
-        <%= f.label :Large_bag %>
+        <%= f.label :large_bag %>
         <%= f.text_field :lg_bag, :required => true %>
       </div>
       <div class="panel-body">
-        <%= f.label :One_Gallon_Tin %>
+        <%= f.label :one_Gallon_Tin %>
         <%= f.text_field :one_gal_tin, :required => true %>
       </div>
       <div class="panel-body">
-        <%= f.label :Two_Gallon_Tin %>
+        <%= f.label :two_Gallon_Tin %>
         <%= f.text_field :two_gal_tin, :required => true %>
       </div>
       <div class="panel-body">
-        <%= f.label :Three_and_a_half_Gallon_Tin %>
+        <%= f.label :three_and_a_half_Gallon_Tin %>
         <%= f.text_field :three_and_half_tin, :required => true %>
       </div>
       <div class="panel-body">
-        <%= f.label :Six_and_a_half_Gallon_Tin %>
+        <%= f.label :six_and_a_half_Gallon_Tin %>
         <%= f.text_field :six_and_half_tin, :required => true %>
       </div>
   </div>
