--- a/app/views/ws_products/_form.html.erb
+++ b/app/views/ws_products/_form.html.erb
@@ -25,27 +25,27 @@
     </div>
       <div class="panel-body">
         <%= f.label :small_bag %>
-        <%= f.text_field :sm_bag, :required => true %>
+        <%= f.text_field :sm_bag %>
       </div>
       <div class="panel-body">
         <%= f.label :large_bag %>
-        <%= f.text_field :lg_bag, :required => true %>
+        <%= f.text_field :lg_bag %>
       </div>
       <div class="panel-body">
         <%= f.label :one_Gallon_Tin %>
-        <%= f.text_field :one_gal_tin, :required => true %>
+        <%= f.text_field :one_gal_tin %>
       </div>
       <div class="panel-body">
         <%= f.label :two_Gallon_Tin %>
-        <%= f.text_field :two_gal_tin, :required => true %>
+        <%= f.text_field :two_gal_tin %>
       </div>
       <div class="panel-body">
         <%= f.label :three_and_a_half_Gallon_Tin %>
-        <%= f.text_field :three_and_half_tin, :required => true %>
+        <%= f.text_field :three_and_half_tin %>
       </div>
       <div class="panel-body">
         <%= f.label :six_and_a_half_Gallon_Tin %>
-        <%= f.text_field :six_and_half_tin, :required => true %>
+        <%= f.text_field :six_and_half_tin %>
       </div>
   </div>
   
