--- a/app/views/ws_products/_form.html.erb
+++ b/app/views/ws_products/_form.html.erb
@@ -24,27 +24,27 @@
       <h3 class="panel-title">Prices</h3>
     </div>
       <div class="panel-body">
-        <%= f.label :small_bag %>
+        <%= f.label :sm_bag %>
         <%= f.text_field :sm_bag %>
       </div>
       <div class="panel-body">
-        <%= f.label :large_bag %>
+        <%= f.label :lg_bag %>
         <%= f.text_field :lg_bag %>
       </div>
       <div class="panel-body">
-        <%= f.label :one_Gallon_Tin %>
+        <%= f.label :one_gal_tin %>
         <%= f.text_field :one_gal_tin %>
       </div>
       <div class="panel-body">
-        <%= f.label :two_Gallon_Tin %>
+        <%= f.label :two_gal_tin %>
         <%= f.text_field :two_gal_tin %>
       </div>
       <div class="panel-body">
-        <%= f.label :three_and_a_half_Gallon_Tin %>
+        <%= f.label :three_and_half_tin %>
         <%= f.text_field :three_and_half_tin %>
       </div>
       <div class="panel-body">
-        <%= f.label :six_and_a_half_Gallon_Tin %>
+        <%= f.label :six_and_half_tin %>
         <%= f.text_field :six_and_half_tin %>
       </div>
   </div>
