found mistake for ws_product creation

--- a/app/views/ws_products/_form.html.erb
+++ b/app/views/ws_products/_form.html.erb
@@ -24,7 +24,7 @@
       <h3 class="panel-title">Prices</h3>
     </div>
       <div class="panel-body">
-        <%= f.label :sm_bag %>
+        <%= f.label :Small_Bag %>
         <%= f.text_field :sm_bag %>
       </div>
       <div class="panel-body">
