--- a/app/views/ws_products/_form.html.erb
+++ b/app/views/ws_products/_form.html.erb
@@ -24,28 +24,28 @@
       <h3 class="panel-title">Prices</h3>
     </div>
       <div class="panel-body">
-        <%= f.label :Small_Bag %>
-        <%= f.text_field :sm_bag %>
+        <%= f.label :sm_bag %>
+        <%= f.text_field :sm_bag, :required => true %>
       </div>
       <div class="panel-body">
         <%= f.label :lg_bag %>
-        <%= f.text_field :lg_bag %>
+        <%= f.text_field :lg_bag, :required => true %>
       </div>
       <div class="panel-body">
         <%= f.label :one_gal_tin %>
-        <%= f.text_field :one_gal_tin %>
+        <%= f.text_field :one_gal_tin, :required => true %>
       </div>
       <div class="panel-body">
         <%= f.label :two_gal_tin %>
-        <%= f.text_field :two_gal_tin %>
+        <%= f.text_field :two_gal_tin, :required => true %>
       </div>
       <div class="panel-body">
         <%= f.label :three_and_half_tin %>
-        <%= f.text_field :three_and_half_tin %>
+        <%= f.text_field :three_and_half_tin, :required => true %>
       </div>
       <div class="panel-body">
         <%= f.label :six_and_half_tin %>
-        <%= f.text_field :six_and_half_tin %>
+        <%= f.text_field :six_and_half_tin, :required => true %>
       </div>
   </div>
   
