change add a product to Wholesale product

--- a/app/views/ws_products/index.html.erb
+++ b/app/views/ws_products/index.html.erb
@@ -3,7 +3,7 @@
 <h1>Popcorn Flavors/ Wholesale Prices</h1>
 <h3>Please add your items by each product line.</h3>
 <% if current_user.admin? %>
-<button type="button" class="btn btn-success"><a href="/ws_products/new"><h5>ADD A NEW Product</h5></a></button>
+<button type="button" class="btn btn-success"><a href="/ws_products/new"><h5>ADD A NEW Wholesale Product</h5></a></button>
 <% end %>
 
 <div class="carted_length">
