--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -18,13 +18,10 @@
         <%= image_tag "Sweet-street-logo.png" %>
         
           <a id="box-link" href="/storepic"></a>
-          <span>Welcome To Sweet Street
-          </span>
-        
-          <center><p class="video" ><iframe width="450" height="270" src="https://www.youtube.com/embed/aOcdaMEVNtw" frameborder="3" allowfullscreen ></iframe></p></center><br>
-        <div>""</div>
-
       </div>
+          
+        
+
       
       <section class="slider">
         <div class="container-fluid">
@@ -147,6 +144,8 @@
 
     </div>
   </div>
+          <div class="embed-responsive embed-responsive-16by9" ><iframe class="embed-responsive-item" width="250" height="170" src="https://www.youtube.com/embed/aOcdaMEVNtw" frameborder="0" allowfullscreen ></iframe>
+          </div><br>
 
 </div>
 
